assets/css/custom.scss
/* ... */
/*#region code flavour*/
// pre{
// 	background-color: rgb(0, 255, 64);
// }

// pre code{
// div.highlight{
// 	// display: none;
// 	// width: auto;
// 	// height: auto;
// 	// // padding: 10px 22px 22px 123px;
// 	// padding: 30px;
// 	// display: block;
// 	// background-color: pink;
// 	// border-radius: 20px;
// 	// border-color: #00ff22;
// 	// border-width: 10px;
// 	// border: 20px solid #ff6550;

// 	& pre{
// 		background-color: #e20c0c;
// 	}
// 	& code{
// 		background-color: #ff00d4;
// 	}
// }

// pre code{
// 	border-radius: 10px;
//     // background: #f4f4f4;
//     border: 1px solid #ddd;
//     border-left: 3px solid #f36d33;
//     color: #666;
//     page-break-inside: avoid;
//     font-family: monospace;
//     font-size: 15px;
//     line-height: 1.6;
//     margin-bottom: 1.6em;
//     max-width: 100%;
//     overflow: auto;
//     padding: 1em 1.5em;
//     display: block;
//     word-wrap: break-word;
// }

// pre[data-lang]::before { content: attr(data-lang); display: block; }
// div.highlight pre code[data-lang]::before { 
// 	content: attr(data-lang); 
// 	text-align: right;
// 	// display: block; 
// 	display: inline-block;
// 	// background-color: pink;
// 	width: 100%;
// 	// position: absolute;
// 	margin-bottom: 10px;
// 	// top: 0px;
// 	// bottom: 10px;
// 	box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
// }

// REFACTOR table old style code

// .articles-content table{
// 	-webkit-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.75);
// 	-moz-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.75);
// 	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.75);
// 	padding: 10px 30px;
// 	border: 2px inset var(--hover-color);
// 	// position: inherit;
// 	position: relative;
// 	display: flex;
// 	flex-direction: column;
// 	& thead{
// 	border-bottom: 2px solid #ff0000;
// 		color: pink;
// 		background-color: red;
// 		position: absolute;
// 		left: 0;
// 		top: 0;
// 		// width: 100%;
// 		// display:flex;
// 	width:100%;
// 	background:#000;
// 	flex-grow: 1;
// 	// padding:($half-spacing-unit * 1.5) 0;

// 	}
// }


// table{
// 	// border: 2px inset var(--hover-color);
	
// 	// & thead{
// 	// 	border: 2px inset var(--hover-color);

// 	// }

// 	background: pink; 
// 	border: 0; 
// 	border-collapse: separate; 
// 	border-spacing: 0 5px;
// }
// thead{
// 	border-bottom: 1px solid red; 
// 	border-collapse: separate; 
// 	border-spacing: 5px 5px;

// }






/*#region borders after*/
// // INFO fix for borders and padding https://stackoverflow.com/questions/6265123/border-top-from-tbody-and-border-bottom-from-thead-dont-work-at-the-same-time
// // https://www.w3schools.com/css/css_table.asp
// table {
// 	// background: pink; 
// 	border: 2px inset var(--hover-color);
	
// 	// border: 0; 
// 	border-collapse: separate; 
// 	border-spacing: 0 0px;
// 	// border-spacing: 5px 5px;
// 	// border-radius: 10px;
	
// }
// thead{

// 	// background: var(--hover-color-soft); 
// }

// thead tr th {
// 	// background: var(--hover-color-soft); 
// 	// border-radius: 20px;
// 	  padding: 5px 10px;
// 	border-bottom: 1px solid red; 
// 	border-left: 1px solid red; 
// 	border-collapse: separate; 
// 	border-spacing: 5px 5px;
//   } 
/*#endregion borders after*/


  
//   tbody tr#first td {
// 	border-top: 3px solid #4d4d4d; 
// 	border-collapse: separate;
// 	border-spacing: 5px 5px;
//   }



table {
	// font-family: Arial, Helvetica, sans-serif;
	border-collapse: collapse;
	width: 100%;
	// padding: 230px 10px;
	border: 3px solid var(--hover-color);

	// https://getcssscan.com/css-box-shadow-examples
	// box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
	// box-shadow: rgb(77, 61, 38) 0px 10px 30px -10px;
	// box-shadow: #1C1C1C 0px 10px 30px -10px;
	box-shadow: var(--shadow-color) 0px 10px 10px -5px;
}

table td, table th {
	// padding: 230px 10px;
	// border: 1px solid #ddd;
	// border: 1px inset var(--hover-color);
	padding: 8px;
}

table tbody tr td{
	// padding-top: 240px;
	padding: 4px 10px;
}

table tr:nth-child(even){
	// background-color: #dbdbdb;
	background-color: var(--tablerow-bg-color2);
}
table tr:nth-child(odd){
	// background-color: #dbdbdb;
	background-color: var(--tablerow-bg-color1);
}

// table tr:hover {
table tr:hover {
	// background-color: #ddd;
	// background-color: var(--hover-color-soft);
	// filter: blur(10px);
	filter: invert(.2);
}

table th {
padding-top: 12px;
padding-bottom: 12px;
text-align: left;
// background-color: #04AA6D;
background-color: var(--hover-color);
color: white;
}


/*#region <a> links*/
.articles-content a:not(.background-animation):not(.underline-animation){
	text-decoration: underline;
	&:hover{
		color: var(--hover-color);
	}
}


.background-animation{
	position: relative;
	text-decoration: none;
	display: inline-block;
	// color: black;
	padding: 0 1px;
	transition: color ease 0.3s;
	
	&::after {
	  content: '';
	  position: absolute;
	  z-index: -1;
	  width: 100%;
	//   height: var(--hover-color);
	  height: 1px;
	  left: 0;
	  bottom: 2px;
	//   background-color: var(--hover-color);
	  background-color: var(--text-2);
	  transition: all ease 0.3s;
	}
	
	&:hover {
		color: white;
		
		&::after {
			background-color: var(--hover-color);
			height: 100%;
		}
	}
}
  




.underline-animation{
	position: relative;
	text-decoration: none;
	display: inline-block;
	// color: black;
	padding: 0 1px;
	transition: color ease 0.3s;
	
	&::before, &::after {
	  content: '';
	  position: absolute;
	  background-color: var(--hover-color);
	  z-index: -1;
	  height: 2px;
	}
	
	&::before {
	  width: 0%;
	  left: 0;
	  bottom: 0;
	  transition: width ease 0.4s;
	}
	
	&::after {
	  width: 100%;
	  left: 0;
	  bottom: 0;
	  transition: all ease 0.6s;
	}
	
	&:hover {
  
	  &::before {
		width: 100%;
	  }
	  
	  &::after {
		left: 100%;
		width: 0%;
		transition: all ease 0.2s;
	  }
	}
}
/* ... */

